# nova

./: CMakeLists.txt  README.md
.github/workflows/: utests.yml
nova/: CMakeLists.txt
nova/include/nova/: defines.h  mat2.h  mat3.h  mat4.h  math.h  types.h  vec2.h  vec3.h  vec4.h
utests/: CMakeLists.txt
utests/src/: utests_mat2.cpp  utests_mat3.cpp  utests_mat4.cpp  utests_math.cpp  utests_vec2.cpp  utests_vec3.cpp  utests_vec4.cpp
